--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@pinecone-database/pinecone": "^6.1.3",
     "axios": "^1.6.0",
+    "openai": "^5.0.0-beta.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.1.13",
