feat: add frontend file upload component and update dependencies
- Add FileUpload React component for testing document uploads
- Update frontend App component to use FileUpload
- Update package dependencies (pdf-parse, mammoth, multer, uuid types)
- Fix nx.json installation configuration
- Update package-lock.json with new dependencies

--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "installation": {
+    "version": "22.0.3"
+  },
   "defaultBase": "main",
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
