--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^11.0.0",
+    "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.0",
-    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/platform-express": "^11.1.9",
     "@pinecone-database/pinecone": "^6.1.3",
-    "axios": "^1.6.0",
-    "openai": "^5.0.0-beta.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.13.2",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
+    "openai": "^6.9.0",
+    "pdf-parse": "^2.4.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -44,14 +48,16 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.19.9",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@types/uuid": "^11.0.0",
     "nx": "22.0.3",
-    "prettier": "^2.6.2",
+    "prettier": "^3.6.2",
     "react-refresh": "^0.10.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "typescript": "~5.9.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   }
 }
