--- a/package.json
+++ b/package.json
@@ -48,14 +48,21 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/multer": "^2.0.0",
     "@types/node": "20.19.9",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/uuid": "^11.0.0",
+    "autoprefixer": "^10.4.22",
+    "css-loader": "^7.1.2",
     "nx": "22.0.3",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
     "prettier": "^3.6.2",
     "react-refresh": "^0.10.0",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
     "typescript": "~5.9.2",
     "webpack-cli": "^6.0.1"
