--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
     "@pinecone-database/pinecone": "^6.1.3",
+    "@types/pdfkit": "^0.17.3",
     "axios": "^1.13.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "openai": "^6.9.0",
     "pdf-parse": "^2.4.5",
+    "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "reflect-metadata": "^0.1.13",
