--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/platform-express": "^11.1.9",
     "@pinecone-database/pinecone": "^6.1.3",
     "@types/pdfkit": "^0.17.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
@@ -25,6 +26,7 @@
     "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
     "uuid": "^13.0.0"
