--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "@nx/node": "22.0.3",
     "@nx/playwright": "22.0.3",
     "@nx/react": "22.0.3",
+    "@nx/rollup": "22.0.3",
     "@nx/web": "22.0.3",
     "@nx/webpack": "22.0.3",
     "@nx/workspace": "22.0.3",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@rollup/plugin-url": "^8.0.2",
+    "@svgr/rollup": "^8.1.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -59,12 +62,14 @@
     "@types/react-dom": "^19.2.0",
     "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.4.22",
+    "core-js": "^3.36.1",
     "css-loader": "^7.1.2",
     "nx": "22.0.3",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.6.2",
     "react-refresh": "^0.10.0",
+    "rollup": "^4.14.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
