--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@nx/devkit": "22.0.3",
     "@nx/eslint": "22.0.3",
+    "@nx/eslint-plugin": "22.0.3",
     "@nx/js": "22.0.3",
     "@nx/nest": "22.0.3",
     "@nx/node": "22.0.3",
@@ -53,6 +55,7 @@
     "@svgr/rollup": "^8.1.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss": "^4.1.17",
@@ -64,6 +67,9 @@
     "autoprefixer": "^10.4.22",
     "core-js": "^3.36.1",
     "css-loader": "^7.1.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.0.3",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
@@ -71,9 +77,11 @@
     "react-refresh": "^0.10.0",
     "rollup": "^4.14.0",
     "style-loader": "^4.0.0",
+    "swc-loader": "0.1.15",
     "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
     "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
     "webpack-cli": "^6.0.1"
   }
 }
