--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
     "@pinecone-database/pinecone": "^6.1.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/pdfkit": "^0.17.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "openai": "^6.9.0",
@@ -29,6 +35,7 @@
     "react-router-dom": "^7.9.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
