--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@casebase-demo/ui-components": ["libs/ui-components/src/index.ts"],
-      "@casebase-demo/api-services": ["libs/api-services/src/index.ts"]
+      "@casebase-demo/api-services": ["libs/api-services/src/index.ts"],
+      "@casebase-demo/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
