feat: add environment variables for backend URL configuration
- Add REACT_APP_BACKEND_URL for frontend API services
- Add FRONTEND_URL for backend CORS configuration
- Update webpack config to support environment variables
- Update all API services to use environment variable
- Add TypeScript types for environment variables
- Update .env.example and README with new variables

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,5 +20,6 @@
       "@casebase-demo/utils": ["libs/utils/src/index.ts"]
     }
   },
+  "include": ["env.d.ts"],
   "exclude": ["node_modules", "tmp"]
 }
