--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ CHUNK_OVERLAP=200
 # Server Configuration
 PORT=3000
 NODE_ENV=development
+
+# Frontend Configuration
+FRONTEND_URL=http://localhost:4200
+
+# Backend URL (for frontend)
+REACT_APP_BACKEND_URL=http://localhost:3000/api
