--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "pdfkit": "^0.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
     "reflect-metadata": "^0.1.13",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
