feat: implement MongoDB chat history storage with CRUD operations
- Add MongoDB integration with Mongoose
- Create ChatHistory schema and service with full CRUD
- Update ChatService to use conversation history in OpenAI API
- Add chatId support in ChatController and API endpoints
- Implement cookie-based chatId persistence on frontend
- Add chat history restoration on page load
- Add 'New Chat' button functionality
- Update ChatService to support chatId in queries
- Add NotFoundException handling for getChatHistory
- Update README with MongoDB configuration and new endpoints

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ FRONTEND_URL=http://localhost:4200
 
 # Backend URL (for frontend)
 REACT_APP_BACKEND_URL=http://localhost:3000/api
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/casebase-demo
