--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.1.9",
     "@pinecone-database/pinecone": "^6.1.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -26,6 +27,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
+    "mongoose": "^8.20.0",
     "multer": "^2.0.2",
     "openai": "^6.9.0",
     "pdf-parse": "^2.4.5",
