Add chat layout, routing improvements, and Docker setup
- Add ChatLayout component with sidebar for chat navigation
- Implement chat routing with support for chatId parameter
- Add lastChatId utility to persist last opened chat in localStorage
- Replace cookie utility with lastChatId utility
- Add Docker Compose configuration for MongoDB
- Update README with Docker installation instructions
- Update backend chat history service and controller
- Update frontend app routing structure
- Add chat sidebar component to UI components library
- Update project configuration files

--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -42,14 +42,21 @@
       "dependsOn": ["prune-lockfile", "copy-workspace-modules"],
       "executor": "nx:noop"
     },
+    "start-mongodb": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "sh -c 'if command -v docker >/dev/null 2>&1; then (open -a Docker 2>/dev/null || true) && timeout=30; while [ $timeout -gt 0 ] && ! docker info >/dev/null 2>&1; do sleep 1; timeout=$((timeout-1)); done; if docker info >/dev/null 2>&1; then docker compose up -d mongodb && sleep 3; else echo \"ERROR: Docker daemon is not running. Please start Docker Desktop manually.\" && exit 1; fi; elif command -v docker-compose >/dev/null 2>&1; then docker-compose up -d mongodb && sleep 3; else echo \"ERROR: Docker not found. Please install Docker or start MongoDB manually.\" && exit 1; fi'",
+        "cwd": "{workspaceRoot}"
+      }
+    },
     "serve": {
       "continuous": true,
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": ["build"],
+      "dependsOn": ["build", "start-mongodb"],
       "options": {
         "buildTarget": "backend:build",
-        "runBuildTargetDependencies": false
+        "runBuildTargetDependencies": true
       },
       "configurations": {
         "development": {
