Add shared types library for frontend and backend type consistency
- Create @casebase-demo/shared-types library in Nx monorepo
- Consolidate common types: ChatMessage, ChatQueryDto, ChatResponse, etc.
- Define shared interfaces: ContextItem, TokensUsed, ApiResponse
- Update backend to use shared types from library
- Update frontend and api-services to use shared types
- Remove duplicate type definitions across codebase
- Ensure type consistency between frontend and backend
- Add FrontendChatRole type for frontend-specific message roles
- Update all imports to use shared types library

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nx/devkit": "22.0.3",
     "@nx/eslint": "22.0.3",
     "@nx/eslint-plugin": "22.0.3",
+    "@nx/jest": "22.0.3",
     "@nx/js": "22.0.3",
     "@nx/nest": "22.0.3",
     "@nx/node": "22.0.3",
@@ -71,6 +72,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "20.19.9",
     "@types/react": "^19.2.0",
@@ -81,6 +83,9 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-util": "^30.0.2",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.0.3",
     "postcss": "^8.5.6",
@@ -91,6 +96,8 @@
     "style-loader": "^4.0.0",
     "swc-loader": "0.1.15",
     "tailwindcss": "^4.1.17",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.8.1",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
