--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@casebase-demo/ui-components": ["libs/ui-components/src/index.ts"],
       "@casebase-demo/api-services": ["libs/api-services/src/index.ts"],
-      "@casebase-demo/utils": ["libs/utils/src/index.ts"]
+      "@casebase-demo/utils": ["libs/utils/src/index.ts"],
+      "@casebase-demo/shared-types": ["libs/shared-types/src/index.ts"]
     }
   },
   "include": ["env.d.ts"],
