Fix backend PDF generation errors and improve error handling
- Fix timestamp handling in PDF service with proper validation and error handling
- Update PDF controller to convert incoming message timestamps from string/Date to Date
- Fix imports: use shared types for ChatMessage and ChatResponse
- Remove unused imports and variables (Get, Query, Readable, messages array)
- Add robust error handling for invalid timestamps in PDF generation
- Ensure PDF generation gracefully handles edge cases

--- a/components.json
+++ b/components.json
@@ -16,6 +16,9 @@
     "ui": "libs/ui-components/src/lib",
     "lib": "libs/ui-components/src/lib",
     "hooks": "apps/frontend/src/hooks"
+  },
+  "registries": {
+    "@acme": "https://acme.com/r/{name}.json"
   }
 }
 
