--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.554.0",
     "mammoth": "^1.11.0",
     "mongoose": "^8.20.0",
@@ -72,6 +73,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "20.19.9",
