fix: ensure shadcn styles are included in CSS bundle and update theme colors
- Move styles.css import to main.tsx entry point for proper bundling
- Remove duplicate styles.css import from app.tsx
- Update primary and ring colors in theme
- Add chart color variables for shadcn components
- Remove custom animation utilities (using Tailwind defaults)

--- a/components.json
+++ b/components.json
@@ -11,11 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "libs/ui-components/src",
-    "utils": "libs/ui-components/src/lib/utils",
-    "ui": "libs/ui-components/src/lib",
-    "lib": "libs/ui-components/src/lib",
-    "hooks": "apps/frontend/src/hooks"
+    "components": "libs/ui-components/src/lib",
   },
   "registries": {
     "@acme": "https://acme.com/r/{name}.json"
