feat: add shadcn sidebar component and fix imports
- Install shadcn sidebar component via CLI
- Add new components: sidebar, separator, sheet, skeleton
- Add use-mobile hook for responsive sidebar behavior
- Fix all imports in ui-components to use @casebase-demo aliases
- Update button, tooltip, input components from shadcn
- Remove problematic tw-animate-css import from styles.css
- Create tsconfig.json in root for shadcn CLI compatibility
- Update component exports in index.ts
- Add use-mobile export to utils library

--- a/components.json
+++ b/components.json
@@ -12,6 +12,10 @@
   },
   "aliases": {
     "components": "libs/ui-components/src/lib",
+    "ui": "libs/ui-components/src/lib",
+    "utils": "libs/utils/src/lib",
+    "hooks": "libs/utils/src/lib",
+    "lib": "libs/utils/src/lib"
   },
   "registries": {
     "@acme": "https://acme.com/r/{name}.json"
