--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pinecone-database/pinecone": "^6.1.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/pdfkit": "^0.17.3",
@@ -43,7 +44,8 @@
     "rehype-sanitize": "^6.0.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
