refactor: separate UI and feature components into separate libraries
- Create new Nx library feature-components for feature-specific components
- Move feature components (chat-sidebar, documents-dialog, empty-chat, message) to feature-components
- Keep UI components (badge, button, card, dialog, etc.) in ui-components
- Move markdown component back to ui-components as it's a reusable UI component
- Update imports in chat.tsx and chat-layout.tsx to use feature-components
- Update relative imports in feature components to use @casebase-demo/ui-components
- Add path alias for @casebase-demo/feature-components in tsconfig.base.json
- Add webpack alias for feature-components library
- Update exports in both libraries' index.ts files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,10 @@
       "@casebase-demo/ui-components": ["libs/ui-components/src/index.ts"],
       "@casebase-demo/api-services": ["libs/api-services/src/index.ts"],
       "@casebase-demo/utils": ["libs/utils/src/index.ts"],
-      "@casebase-demo/shared-types": ["libs/shared-types/src/index.ts"]
+      "@casebase-demo/shared-types": ["libs/shared-types/src/index.ts"],
+      "@casebase-demo/feature-components": [
+        "libs/feature-components/src/index.ts"
+      ]
     }
   },
   "include": ["env.d.ts"],
