--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.3.0",
     "@types/html2pdf.js": "^0.10.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
@@ -84,11 +86,13 @@
     "@types/react-dom": "^19.2.0",
     "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.4.22",
+    "babel-jest": "^30.0.2",
     "core-js": "^3.36.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "jsonc-eslint-parser": "^2.1.0",
