--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "nx test",
     "lint": "nx lint",
     "serve": "nx serve",
-    "dev": "nx run-many --target=serve --projects=backend,frontend"
+    "dev": "nx run-many --target=serve --projects=backend,frontend",
+    "start": "nx serve backend --configuration=production & nx serve-static frontend",
+    "start:backend": "nx serve backend --configuration=production",
+    "start:frontend": "nx serve-static frontend"
   },
   "private": true,
   "dependencies": {
