--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "nx build",
-    "test": "nx test",
-    "lint": "nx lint",
+    "build": "nx run-many --target=build --projects=backend,frontend",
+    "test": "nx run-many --target=test --projects=backend,frontend",
+    "lint": "nx run-many --target=lint --projects=backend,frontend",
     "serve": "nx serve",
     "dev": "nx run-many --target=serve --projects=backend,frontend",
     "start": "nx serve backend --configuration=production & nx serve-static frontend",
