--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "nx run-many --target=build --projects=backend,frontend",
-    "test": "nx run-many --target=test --projects=backend,frontend",
-    "lint": "nx run-many --target=lint --projects=backend,frontend",
-    "serve": "nx serve",
-    "dev": "nx run-many --target=serve --projects=backend,frontend",
-    "start": "nx serve backend --configuration=production & nx serve-static frontend",
-    "start:backend": "nx serve backend --configuration=production",
-    "start:frontend": "nx serve-static frontend"
+    "build": "npx nx run-many --target=build --projects=backend,frontend",
+    "test": "npx nx run-many --target=test --projects=backend,frontend",
+    "lint": "npx nx run-many --target=lint --projects=backend,frontend",
+    "serve": "npx nx serve",
+    "dev": "npx nx run-many --target=serve --projects=backend,frontend",
+    "start": "npx nx serve backend --configuration=production & npx nx serve-static frontend",
+    "start:backend": "npx nx serve backend --configuration=production",
+    "start:frontend": "npx nx serve-static frontend"
   },
   "private": true,
   "dependencies": {
