--- a/package.json
+++ b/package.json
@@ -49,14 +49,7 @@
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "nx": "22.0.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.0",
+    "nx": "22.0.3",
     "@nx/devkit": "22.0.3",
     "@nx/eslint": "22.0.3",
     "@nx/eslint-plugin": "22.0.3",
@@ -69,7 +62,14 @@
     "@nx/rollup": "22.0.3",
     "@nx/web": "22.0.3",
     "@nx/webpack": "22.0.3",
-    "@nx/workspace": "22.0.3",
+    "@nx/workspace": "22.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^8.0.2",
