--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "npx nx run-many --target=build --projects=backend,frontend",
+    "build": "npx nx run-many --target=build --projects=backend,frontend --skip-nx-cache",
     "test": "npx nx run-many --target=test --projects=backend,frontend",
     "lint": "npx nx run-many --target=lint --projects=backend,frontend",
     "serve": "npx nx serve",
